chore(ci): use Node 22 in GitHub Actions and declare engines

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
       "name": "Globetrotter App",
       "version": "0.1.0",
       "private": true,
+        "engines": {
+            "node": ">=22 <23",
+            "npm": ">=10"
+        },
       "dependencies": {
           "@radix-ui/react-accordion": "^1.2.3",
           "@radix-ui/react-alert-dialog": "^1.1.6",
