--- a/.github/workflows/azure-webapp-deploy.yml
+++ b/.github/workflows/azure-webapp-deploy.yml
@@ -22,10 +22,14 @@ jobs:
 
       - name: Build
         run: npm run build
+      - name: Create zip for deployment
+        run: |
+          cd dist
+          zip -r ../dist.zip .
 
-      - name: Deploy to Azure Web App
+      - name: Deploy to Azure Web App (zip deploy)
         uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: './dist'
+          package: './dist.zip'
